Updating cucumber framework